Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31205

Can't save anymore with Ctrl+S

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 14.0.0-rc1
    • Qt Creator 6.0.2, Qt Creator 14.0.0-rc1
    • Editors
    • Linux/X11, Windows
    • 028f27781 (14.0)

      Steps to reproduce:

      • open a file or project, have a file open inside an editor
      • change the file - but do not save it
      • click on the toolbutton on the editor toolbar holding the document icon (directly before the document's name) with left mouse
      • a menu should open up including an enabled "Save CurrentFileName   Ctrl+S"
      • just click back into the editor without choosing anything from the menu
      • from now on using Ctrl+S from the editor is broken (ambigous shortcut)

        For Gerrit Dashboard: QTCREATORBUG-31205
        # Subject Branch Project Status CR V

            davschul David Schulz
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes